# content-ai-agent

./: .env.gemini_api.example  .env.local.example  .env.openai.example  .env.vertex_ai.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
documents/: architecture.md  template-engine-viewer-design.md
src/: main.py
src/agent/: __init__.py  agent.py  base.py
src/api/: routes.py
src/core/: async_genai_session.py  config.py  elasticsearch_config.py  model_factory.py  session_factory.py  validation_error_handler.py
src/core/config/: analysis.py  base.py  elasticsearch.py  llm.py  settings.py
src/core/config/providers/: base.py  gemini_api.py  openai.py  vertex_ai.py
src/core/config/secrets/: aws.py  base.py  gcp.py
src/core/llm/: enums.py  exceptions.py  models.py  registry.py
src/core/llm/base/: factory.py  session.py
src/loaders/: __init__.py  base.py  gcs_loader.py  local_file_loader.py  s3_loader.py
src/prompts/system/: base.jinja2
src/prompts/system/common/: customer_facing_analyst.j2  customer_facing_smart_bot.j2  pro_data_analyst.j2
src/prompts/system/gemini_api/: customer_facing_analyst.j2  customer_facing_smart_bot.j2  pro_data_analyst.j2
src/prompts/system/openai/: customer_facing_analyst.j2  customer_facing_smart_bot.j2  pro_data_analyst.j2
src/prompts/system/vertex_ai/: customer_facing_analyst.j2  customer_facing_smart_bot.j2  pro_data_analyst.j2
src/prompts/task/common/: content_analysis_structuring.j2  content_analysis_structuring.jinja2  content_analysis_structuring_optimized.j2  content_analysis_summary_refine.j2  content_analysis_summary_refine.jinja2  multi_project_content_analysis_structuring.j2  multi_project_content_analysis_summary_refine.j2
src/prompts/task/gemini_api/: content_analysis_structuring.j2  content_analysis_structuring.jinja2  content_analysis_summary_refine.j2  content_analysis_summary_refine.jinja2  multi_project_content_analysis_structuring.j2  multi_project_content_analysis_summary_refine.j2
src/prompts/task/openai/: content_analysis_structuring.j2  content_analysis_structuring.jinja2  (+4 more)
src/schemas/: enums.py  models.py
src/schemas/enums/: analysis_mode.py  content_type.py  finish_reason.py  mime_type.py  persona_type.py  project_type.py  sentiment_type.py
src/secret_providers/: aws_secrets_provider.py  base.py  env_provider.py  gsm_provider.py
src/secrets/: aws_secrets_provider.py  env_provider.py  gsm_provider.py
src/services/: es_content_analysis_result_service.py  es_content_retrieval_service.py  llm_service.py  memory.py  orchestrator.py  request_content_loader.py
src/utils/: generation_viewer.py  llm_usage_aggregator.py  prompt_form_template.py  prompt_manager.py  prompt_renderer.py  prompt_template.py  schema_description_extractor.py  token_cost_calculator.py
src/viewer/: __init__.py  app.py  refine_result_renderer.py  viewer_data_service.py  viewer_es_client.py
tests/: conftest.py  test_contents.py  test_map_reduce.py  test_single_pass.py
tests/common/: conftest.py
tests/data/: project_365330.json  sample1.txt  sample2.txt  sample3.txt
tests/integration/: test_content_analysis_flow.py  test_detailed_analysis_flow.py  test_es_content_analysis_result.py  test_es_retrieval_real_data.py  test_html_generation.py  test_multi_project_chunking.py  test_parallel_project_chunking.py  test_sequential_chunking.py
tests/unit/: test_ko_doc.py  test_openai_response_schema.py
viewer/: .env.example  .gitignore  README.md  pyproject.toml
viewer/deploy/: README.md  deploy.sh  package-lambda.sh  samconfig.toml  template.yaml
viewer/viewer/: config.py  main.py
viewer/viewer/api/: routes.py
viewer/viewer/schemas/: enums.py  models.py
viewer/viewer/services/: data_service.py  es_client.py
viewer/viewer/streamlit/: app.py  renderer.py
viewer/viewer/templates/: base.html  viewer.html  viewer_compare.html  viewer_compare_list.html  viewer_error.html  viewer_list.html  viewer_stats.html
viewer/viewer/templates/components/: category_detail.html  category_grid.html  insights.html  llm_usage.html  modal.html  project_info.html
(+61 files in other folders)
