[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-ai-agent"
version = "0.1.0"
description = "Content Analysis AI Agent using Google Vertex AI Gemini models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
  {name = "Wadiz AI Team", email = "ai-team@wadiz.kr"}
]
dependencies = [
    # Data Validation & Settings
    "pydantic>=2.0.0",
    "pydantic-settings",

    # Infrastructure (Core)
    "python-dotenv",
    "jinja2",

    # Elasticsearch (8.x only - ES server 8.11.0 compatibility)
    "elasticsearch>=8.0.0,<9.0.0",

    # Interface (FastAPI / Uvicorn)
    "fastapi",
    "uvicorn[standard]"
]

[project.optional-dependencies]
# GCP/Vertex AI 기반 분석 기능 (기본 Agent 기능)
gcp = [
    "google-cloud-aiplatform>=1.60.0",
    "google-genai>=0.3.0",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "tenacity"
]

# OpenAI 기반 분석 기능
openai = [
    "openai>=1.0.0",
    "tiktoken"
]

# AWS 인프라 지원
aws = [
    "boto3>=1.28.0"
]

# 전체 기능 (기존 pip install . 과 동일)
full = [
    "content-ai-agent[gcp]"
]

# 모든 Provider 지원 (GCP + OpenAI + AWS)
all-providers = [
    "content-ai-agent[gcp]",
    "content-ai-agent[openai]",
    "content-ai-agent[aws]"
]

dev = [
    # Testing & Quality
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "ipython",

    # PDF Generation (Optional)
    "weasyprint>=62.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
